test_regress/t/t_force_chained.out
%Error: t/t_force_chained.v:27:  got='h0 exp='h00000001
%Error: t/t_force_chained.v:33:  got='h0 exp='h00000002
%Error: t/t_force_chained.v:40:  got='h0 exp='h00000003
%Error: t/t_force_chained.v:46:  got='h0 exp='h00000003
